--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>Coinmute</p>
             </div>
             <ul class="menu">
-                <li>Home</li>
+                <li>Homeхуй</li>
                 <li>About us</li>
                 <li>Swap</li>
                 <li>Donate</li>
